70217 fix jumping gallery, add grid to PDP layout

--- a/Snowdog_Components/components/Templates/product-view/_product-view.scss
+++ b/Snowdog_Components/components/Templates/product-view/_product-view.scss
@@ -14,13 +14,17 @@
         max-width: $product-view__wrapper-max-width;
 
         @include mq($screen-m) {
-            display: block;
+            display: grid;
+            grid-template-columns: 50% 50%;
+            grid-template-rows: auto auto auto;
+            column-gap: $product-view__column-gap\@medium;
         }
 
-        &:after {
-            content: '';
-            display: block;
-            clear: both;
+        @include mq($screen-l) {
+            column-gap: $product-view__column-gap\@large;
+        }
+        @include mq($screen-xl) {
+            column-gap: $product-view__column-gap\@xl;
         }
     }
 
@@ -28,19 +32,16 @@
     &__details {
         position: relative;
         @include mq($screen-m) {
-            float: right;
-            width: $product-view__details-width\@medium;
-            margin: $product-view__details-margin\@medium;
+            grid-column-start: 2;
+            width: calc(100% - #{$product-view__column-gap\@medium})
         }
 
         @include mq($screen-l) {
-            width: $product-view__details-width\@large;
-            margin: $product-view__details-margin\@large;
+            width: calc(100% - #{$product-view__column-gap\@large})
         }
 
         @include mq($screen-xl) {
-            width: $product-view__details-width\@xl;
-            margin: $product-view__details-margin\@xl;
+            width: calc(100% - #{$product-view__column-gap\@xl})
         }
     }
 
@@ -50,6 +51,9 @@
 
     &__details {
         order: 3;
+        @include mq($screen-m) {
+            grid-row-start: 2;
+        }
     }
 
     &__gallery {
@@ -58,8 +62,9 @@
         order: 1;
 
         @include mq($screen-m) {
-            float: left;
-            width: $product-view__gallery-width\@medium;
+            grid-column-start: 1;
+            grid-row-start: 1;
+            grid-row-end: 3;
         }
     }
 
@@ -201,7 +206,7 @@
 
         @include mq($screen-m) {
             display: flex;
-            width: $product-view__extra-actions-width\@medium; 
+            width: $product-view__extra-actions-width\@medium;
         }
     }
 
@@ -209,10 +214,10 @@
         width: $product-view__button-width;
         background-color: $product-view__button-bg;
         order: 2;
-        
+
         @include mq($screen-m) {
             margin: $product-view__button-margin\@medium;
-            width: $product-view__button-width\@medium; 
+            width: $product-view__button-width\@medium;
             min-width: $product-view__button-min-size;
             min-height: $product-view__button-min-size;
         }
@@ -238,7 +243,7 @@
                         display: block;
                         background-image: $product-view__button-wishlist-filled-bg-image-after-hover;
                     }
-                    
+
                     .icon {
                         fill: $white;
                     }
@@ -268,13 +273,13 @@
         .button__text {
             display: none;
         }
-        
+
         &--update {
             display: flex;
 
             .button__text {
                 display: inline-block;
-            }  
+            }
         }
     }
 
@@ -643,7 +648,7 @@
             position: absolute;
             bottom: $product-view__add-to-cart-ee-action-bottom;
             right: $product-view__add-to-cart-ee-action-right;
-            
+
             @include mq($screen-m) {
                 position: static;
             }
